[gd_scene load_steps=22 format=1]

[ext_resource path="res://Survivor/Survivor.gd" type="Script" id=1]
[ext_resource path="res://Assets/sounds/soundFX/jump_sound.smp" type="Sample" id=2]
[ext_resource path="res://Survivor/Sprites/Idle/idling1.png" type="Texture" id=3]
[ext_resource path="res://Survivor/Sprites/Idle/idling2.png" type="Texture" id=4]
[ext_resource path="res://Survivor/Sprites/Idle/idling3.png" type="Texture" id=5]
[ext_resource path="res://Survivor/Sprites/Idle/idling4.png" type="Texture" id=6]
[ext_resource path="res://Survivor/Sprites/Move/move1.png" type="Texture" id=7]
[ext_resource path="res://Survivor/Sprites/Move/move2.png" type="Texture" id=8]
[ext_resource path="res://Survivor/Sprites/Move/move3.png" type="Texture" id=9]
[ext_resource path="res://Survivor/Sprites/Move/move4.png" type="Texture" id=10]
[ext_resource path="res://Survivor/Sprites/Jump/jump1.png" type="Texture" id=11]
[ext_resource path="res://Survivor/Sprites/Jump/jump4.png" type="Texture" id=12]
[ext_resource path="res://Survivor/Sprites/Jump/jump2.png" type="Texture" id=13]
[ext_resource path="res://Survivor/Sprites/Jump/jump3.png" type="Texture" id=14]
[ext_resource path="res://Survivor/Sprites/Jump/jump5.png" type="Texture" id=15]
[ext_resource path="res://Survivor/Sprites/Idle/idle1.png" type="Texture" id=16]
[ext_resource path="res://Assets/fonts/PixelGothic.fnt" type="BitmapFont" id=17]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SampleLibrary" id=4]

samples/jump = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "move",
"speed": 9.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "land",
"speed": 13.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": false,
"name": "launch",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Survivor" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 4, 0, 0, 5.1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="FX" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="SurvivorSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[node name="SurvivorBody" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 4, 5.1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="SurvivorBottom" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 4.5, 0, 0, 3.82308, 0, 17.7 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurvivorBottom"]

transform/pos = Vector2( 0, 17.7 )
transform/scale = Vector2( 4.5, 3.82308 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="SurvivorName" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -30.0
margin/top = 30.0
margin/right = 90.0
margin/bottom = 70.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player X"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


